# InfiniteConquest

./: CMakeLists.txt  README.md  SourceFilesName.cmake  SourceFilesName_Generator.sh
src/: Main.cpp  Main.h
src/Background/: Background.cpp  Background.h
src/Bonus/: BonusChoices.cpp  BonusChoices.h  EntityBonus.h  FamiliarEntityAttackIncrease.h  FamiliarEntityBonus.h  PlayerEntityAttackIncrease.h  PlayerEntityBonus.h  PlayerEntityLifeMaxIncrease.h  PlayerEntityLifeRegeneration.h  PlayerEntityRageIncrease.h
src/Entity/: EnemyEntity.cpp  EnemyEntity.h  Entity.cpp  Entity.h  EntityState.h  EntityTeam.h  EntityType.h  FamiliarEntity.cpp  FamiliarEntity.h  PlayerEntity.cpp  PlayerEntity.h
src/Factory/: EnemyEntityFactory.h  Factory.h  FamiliarEntityFactory.h  PlayerEntityFactory.h  SpriteSheetFactory.h
src/Game/: Game.cpp  Game.h  GameContent.cpp  GameContent.h  GameEntityRole.h
src/GameOver/: GameOver.cpp  GameOver.h
src/Gauge/: Gauge.h  LifeGauge.cpp  LifeGauge.h  RageGauge.cpp  RageGauge.h
src/Global/: GlobalEnemyEntityFactory.h  GlobalFamiliarEntityFactory.h  GlobalFontManager.h  GlobalGame.h  GlobalPlayerEntityFactory.h  GlobalSpriteSheetFactory.h  GlobalTextureManager.h  Globals.h
src/Interface/: Animable.cpp  Animable.h  Drawable.cpp  Drawable.h  Flippable.cpp  Flippable.h  Transformable.cpp  Transformable.h
src/Level/: EnemyEntityLeveling.h  LevelIndicator.cpp  LevelIndicator.h
src/Manager/: FontManager.h  Manager.h  TextureManager.h
src/Qte/: Qte.cpp  Qte.h  QteBar.cpp  QteBar.h  QteBlock.cpp  QteBlock.h  QteCursor.cpp  QteCursor.h  (+6 more)
(+35 files in other folders)
